--- a/css/stylemusic.css
+++ b/css/stylemusic.css
@@ -50,7 +50,7 @@ div#background {
 div#hero{
     width: 150px;
     height: 150px;
-    background-image: url(irish-coffee/face.png);
+    background-image: url(../img/face.png);
     background-size: 100% 100%;
     object-fit: cover;
     position: absolute;
@@ -83,7 +83,7 @@ div#enemies {
 div.enemy {
     width: 50px;
     height: 50px;
-    background-image: url(irish-coffee/headphones.png);
+    background-image: url(../img/headphones.png);
     background-size: 100% 100%;
     object-fit: cover;
     position: absolute;
