--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ div#text{
 @-webkit-keyframes blink { 50% { visibility: hidden; }}
 @keyframes blink { 50% { visibility: hidden; }}
 
+
 div#game {
     margin: 0 auto;
     width: 1200px;
@@ -44,44 +45,5 @@ div#background {
     object-fit: cover;
     overflow: hidden;
     position: absolute;
-}
-
-div#hero{
-    width: 150px;
-    height: 150px;
-    background-size: 100% 100%;
-    object-fit: cover;
-    position: absolute;
-    left: 600px;
-    /* margin-left: -50px; */
-    top: 450px;
-}
-
-div#missiles{
-    width: 1200px;
-    height: 600px;
-    position: absolute;
-}
-
-
-div.missile{
-    width: 40px;
-    height: 20px;
-    background-size: 100% 100%;
-    object-fit: cover;
-    position: absolute;
-}
-
-div#enemies {
-    width: 1200px;
-    height: 800px;
-    position: absolute;
-}
-
-div.enemy {
-    width: 50px;
-    height: 50px;
-    background-size: 100% 100%;
-    object-fit: cover;
-    position: absolute;
+    /* transition: 0.8s; */
 }
