--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 body{
     margin: 0;
-    background-color: black;
+    background-image: url(../img/black.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 h1, h2{
