--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,27 @@
 body{
+    min-height: 100vh;
+    width: 100vw;
     margin: 0;
     background-image: url(../img/black.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     font-family: 'Slabo 27px', serif;
 }
+
+@media only screen and (max-width: 1200px) {
+    .content {
+      display: none;
+    }
+    .smallScreens{
+        display: block;
+        padding: 100px 20px 0 20px;
+        color: red;
+        font-weight: bold;
+    }
+    .smallScreens::after{
+        content: "Helaas, dit scherm is te klein om deze website te bezoeken. Je kan altijd koffie drinken in de plaats.";
+    }
+  }
 
 h1, h2{
     font-family: 'Yeon Sung', cursive;
