--- a/css/styleHeroGames.css
+++ b/css/styleHeroGames.css
@@ -1,3 +1,41 @@
+.navigate{
+    padding: 20px;
+}
+
+.navigate a{
+    padding: 20px;
+    color: white;
+}
+
+.instructions{
+    margin: 50px;
+}
+
+p{
+    font-family: 'Yeon Sung', cursive;
+    font-size: 20px;
+    color: white;
+    text-align: center;
+}
+
+div#game {
+    margin: 0 auto;
+    width: 1200px;
+    height: 600px;
+    position: relative;
+}
+
+div#background {
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    object-fit: cover;
+    overflow: hidden;
+    position: absolute;
+    /* transition: 0.8s; */
+}
+
 div#hero{
     width: 150px;
     height: 150px;
