--- a/css/styleIndex.css
+++ b/css/styleIndex.css
@@ -1,8 +1,7 @@
 a{
     color: black;
-    text-decoration: none;
+    text-decoration: none;  
 }
-
 
 .title{
     height: 25vh;
@@ -26,8 +25,6 @@ a{
     width: auto;
     min-width: 270px;
     height: 270px;
-    /* background-color: white; */
-    /* transition: 0.8s; */
     background-color: lightgrey;
 }
 
@@ -45,10 +42,7 @@ h4{
 
 footer{
     padding: 2.5vh;
-    /* background-color: rgba(0,0,0,0.5); */
-    /* -webkit-box-shadow: inset 0px 76px 223px 45px rgba(0,0,0,0.5);
--moz-box-shadow: inset 0px 76px 223px 45px rgba(0,0,0,0.75); */
-box-shadow: inset 7px 20px 100px 10px rgba(0,0,0,0.5);
+    box-shadow: inset 7px 20px 100px 10px rgba(0,0,0,0.5);
     color: white;
     position: fixed;
     bottom: 0;
@@ -57,4 +51,10 @@ box-shadow: inset 7px 20px 100px 10px rgba(0,0,0,0.5);
     height: 5vh;
     display: flex;
     justify-content: space-between;
+    font-weight: bold;
+}
+
+footer a{
+    color: white;
+    text-decoration: none;
 }
